#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.66])

VERSION="1.0.0"
AC_INIT([vlm-tool], [1.0.0], [Tommy.Reynolds@Oracle.com])

# Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PATH_PYTHON
AM_INIT_AUTOMAKE
AC_SUBST(VERSION)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile vlm-tool.spec vlm-tool.py])
AC_OUTPUT
